# touchGame

./: .gitignore  DEPLOYMENT.md  INSTALL.txt  PLAY_STORE_DEPLOYMENT.md  README.md  local.properties.example  settings.gradle
.github/: copilot-instructions.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  game.cpp  game.h  native-lib.cpp
app/src/main/java/com/rog3rb0t/touchgame/: GameActivity.java  GameView.java  LoadingActivity.java
app/src/main/res/drawable/: button_exit.xml  button_reset.xml  ic_launcher_foreground.xml  loading_image.xml
app/src/main/res/layout/: activity_loading.xml
